# IT_Factory

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
a_store/: admin.py  models.py  serializers.py  urls.py  views.py
a_store/migrations/: 0001_initial.py
config/: settings.py  urls.py
visits/: admin.py  models.py  serializers.py  urls.py  views.py
visits/migrations/: 0001_initial.py
